terraform/kubernetes/database/postgres-database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-database
spec:
  serviceName: "postgres-database-svc"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-database
  template:
    metadata:
      labels:
        app: postgres-database
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: postgres
          image: kiszkahubert/prjinz_db
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgdata
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
