terraform/kubernetes/database/postgres-database-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-database-svc
spec:
  clusterIP: None
  selector:
    app: postgres-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
